2017-06-14  Simon Pfreundschuh  <simon.pfreundschuh@chalmers.se>

	* arts-2-3-722

	* controlfiles/artscomponents/oem/TestOEM.arts: Added missing OEM test.

2017-06-13  Simon Pfreundschuh  <simon.pfreundschuh@chalmers.se>

	* arts-2-3-721

	* controlfiles/testdata/ozone-line.xml: Moved from groundbased
	tests to be reused for OEM testing.

	* controlfiles/artscomponents/groundbased/*.arts: Updated position
	of ozone line file.

	* controlfiles/CMakeLists.txt: Added new OEM test.

	* src/m_oem.cc(oem_checks): Extended oem_checks to properly handle
	missing or precomputed x, yf, jacobian.

2017-06-13  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-720

	* doc/uguide/cloudradar.tex: Slight reorganisation and wrote a
	basic description of Jacobian calculations. Even stuff not yet
	implemented!

2017-06-13  Simon Pfreundschuh  <simon.pfreundschuh@chalmers.se>

	* arts-2-3-719

	* src/m_oem.cc(OEM_checks): Use .empty() member function to test
	for emptiness of matrices.

	* src/m_oem.cc: Fixed calculation of covmat_so. Renamed avkCalc,
	covmat_soCalc for consistency. Added covmat_ssCalc.

	* src/methods.cc: Updated entries for avkCalc, covmat_soCalc,
	covmat_ssCalc.

	* src/workspace.cc: Updated entries for avk, covmat_so, covmat_ss.

2017-06-13 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-719

	* src/m_cloudradar, m_cloudbox.cc (psdMH97,
	pnd_fieldCalcFromParticleBulkProps, pndFrompsdBasic,
	pnd_size_gridFromScatMeta):
	Moved from m_cloudradar.cc to m_cloudbox.cc

	* src/m_cloudbox.cc 
	
	(psdW16): Added pnd_agenda WSM for rain following Wang, 2016.

	(dNdD_MH97): Throw error when T (in K) is negative.
	(dNdD_W16): Error message fix. 

	* src/cloudbox.cc (psd_cloudiceMH97):
	Initialize all sig_* with 0 (as not noisy is the more often used
	option), then reset only if noisy is chosen.

	* src/methods.cc (psdW16, psdMH97, dNdD_MH97, dNdD_W16):
	Written/updated/completed built-in doc.

2017-06-13  Richard Larsson  <ric.larsson@gmail.com>
