@@ -1,3 +1,14 @@
+2017-06-14  Patrick Eriksson  <patrick.eriksson@chalmers.se>
+
+	* arts-2-3-723
+
+	* src/workspace.cc: Somne extension of description of the
+	covariance matrices used by OEM.
+
+	* controlfiles/artscomponents/oem/TestOEM.arts: A small extension
+	to indicate that x, yf, and jacobian can both be empty or
+	pre-calculated.
+
 2017-06-14  Simon Pfreundschuh  <simon.pfreundschuh@chalmers.se>
 
 	* arts-2-3-722
